[package]
name = "tokio-evacuate"
description = "A future for coordinating controlled shutdown of participants."
version = "3.0.0-alpha.0"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
license = "MIT"
edition = "2018"

[dependencies]
futures-preview = "=0.3.0-alpha.18"
parking_lot = "^0.9"
slab = "^0.4"
tokio-executor = "=0.2.0-alpha.4"
tokio-sync = "=0.2.0-alpha.4"
tokio-timer = "=0.3.0-alpha.4"

[dev-dependencies]
tokio-test = "=0.2.0-alpha.4"
